--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+asgiref==3.4.1
+beautifulsoup4==4.10.0
 certifi==2021.10.8
 dj-database-url==0.5.0
 Django==3.0.3
 django-autocomplete-light==3.8.2
 django-bootstrap3==15.0.0
-django-bootstrap4 @ file:///home/conda/feedstock_root/build_artifacts/django-bootstrap4_1634749717176/work
+django-bootstrap4==3.0.1
 django-filter==21.1
 django-heroku==0.3.1
 django-tables2==2.4.1
@@ -13,3 +15,8 @@ psycopg2==2.8.2
 python-decouple==3.4
 pytz==2021.3
 six==1.16.0
+soupsieve==2.3
+sqlparse==0.4.1
+typing-extensions==3.10.0.2
+whitenoise==5.3.0
+zipp==3.6.0
