--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ python-decouple==3.4
 pytz==2021.3
 six==1.16.0
 soupsieve==2.3
+sqlite3==3.36.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.2
 whitenoise==5.3.0
